[DASH-3675][Manage Integration] Integration logo image

--- a/src/appsco-manage-integration-page.html
+++ b/src/appsco-manage-integration-page.html
@@ -139,7 +139,7 @@
                             src="[[ integration.integration.image ]]"
                             alt="Integration image"
                             class="sized"
-                            sizing="cover"
+                            sizing="contain"
                             preload fade>
                         </iron-image>
                     </div>
