--- a/src/provisioning/appsco-active-integrations.html
+++ b/src/provisioning/appsco-active-integrations.html
@@ -12,6 +12,14 @@
         <style include="appsco-list-styles"></style>
 
         <style>
+            :host {
+                --appsco-list-item: {
+                    @apply(--appsco-active-integration-item);
+                };
+                --appsco-list-item-activated: {
+                    @apply(--appsco-active-integration-item-activated);
+                };
+            }
             :host appsco-active-integration-item {
                 width: 100%;
                 margin: 0 0 10px 0;
@@ -73,7 +81,7 @@
             ],
 
             reloadIntegrations: function() {
-                this.$.getListApiRequest.generateRequest();
+                this.reloadItems();
             }
         });
     </script>
