--- a/src/company/appsco-company-idp-settings-page.html
+++ b/src/company/appsco-company-idp-settings-page.html
@@ -42,7 +42,7 @@
                         id="appscoCompanyIdPSettings"
                         company="[[ company ]]"
                         authorization-token="[[ authorizationToken ]]"
-                        settings-api="[[ settingsApi ]]"
+                        id-p-integrations-api="[[ idPIntegrationsApi ]]"
                         api-errors="[[ apiErrors ]]"
                         on-idp-settings-saved="_onIdPSettingsSaved"></appsco-company-idp-settings>
             </div>
@@ -68,7 +68,7 @@
                     type: String
                 },
 
-                settingsApi: {
+                idPIntegrationsApi: {
                     type: String,
                     value: ''
                 },
