--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -302,6 +302,9 @@
                 --paper-input-prefix-icon-fill-color: var(--secondary-text-color);
                 --paper-input-focused-prefix-icon-fill-color: var(--app-primary-color-dark);
 
+                --paper-input-suffix: {
+                    opacity: 0.5;
+                };
                 --paper-input-suffix-icon-fill-color: var(--secondary-text-color);
                 --paper-input-focused-suffix-icon-fill-color: var(--app-primary-color-dark);
 
