DASH-3736 [Frontend][Manage Customer] Modify the text on Customer subscription card

--- a/src/appsco-customer-billing-page.html
+++ b/src/appsco-customer-billing-page.html
@@ -314,7 +314,7 @@
                                         class="upcoming-invoice">
                                 <div class="card-content">
                                     <p class="message">
-                                        Purchasing customer licenses is done by invoice. If you require more licenses please contact AppsCo Sales at sales@appsco.com.
+                                        Purchasing customer licences is done by invoice. If you require more licences please contact AppsCo Sales at sales@appsco.com.
                                     </p>
 
                                     <p class="message">
@@ -367,7 +367,7 @@
                                                     <span class="per-user-label">&nbsp per licence</span>
                                                 </div>
                                                 <div class="flex-horizontal">
-                                                    <span class="subscription-plan-label">Customer Licenses:</span>
+                                                    <span class="subscription-plan-label">Customer Licences:</span>
                                                     <span>[[ _subscription.quantity ]]</span>
                                                 </div>
                                                 <div class="flex-horizontal">
@@ -496,7 +496,7 @@
                         <template is="dom-repeat" items="{{ _selectedInvoice.items }}">
                             <div class="flex-horizontal">
                                 <span class="item-quantity border-bottom font12">[[ item.quantity ]]</span>
-                                <span class="flex item-item border-bottom font12">AppsCo Licenses</span>
+                                <span class="flex item-item border-bottom font12">AppsCo Licences</span>
                             <span class="item-price border-bottom font12">
                                 <appsco-price
                                         price="[[ item.amount ]]"
@@ -550,7 +550,6 @@
                         Send invoice
                     </paper-button>
                 </div>
-            </div>
             </div>
 
         </appsco-content>
