--- a/src/billing/appsco-update-subscription-action.html
+++ b/src/billing/appsco-update-subscription-action.html
@@ -128,8 +128,8 @@
                                        multi-color></appsco-loader>
 
                         <p class="info">
-                            AppsCo Partner provides yearly licenses and monthly licenses subscription plans.
-                            You can purchase licenses which you can then distribute to your customers.
+                            AppsCo Partner provides yearly licences and monthly licences subscription plans.
+                            You can purchase licences which you can then distribute to your customers.
                             During subscription period you can always cancel, upgrade or downgrade subscription.
                             When changing plans or quantities, we will optionally prorate the price we charge next month to make up for any price changes.
                             If you cancel subscription it will still remain active until subscription period end.
