--- a/src/appsco-billing-page.html
+++ b/src/appsco-billing-page.html
@@ -361,7 +361,7 @@
                                             <span class="per-user-label">per user</span>
                                         </div>
                                         <div class="flex-horizontal">
-                                            <span class="subscription-plan-label">Appsco Licenses:</span>
+                                            <span class="subscription-plan-label">AppsCo Licences:</span>
                                             <span>[[ _subscription.quantity ]]</span>
                                         </div>
                                         <div class="flex-horizontal">
@@ -487,7 +487,7 @@
                         <template is="dom-repeat" items="{{ _selectedInvoice.items }}">
                             <div class="flex-horizontal">
                                 <span class="item-quantity border-bottom font12">[[ item.quantity ]]</span>
-                                <span class="flex item-item border-bottom font12">AppsCo Licenses</span>
+                                <span class="flex item-item border-bottom font12">AppsCo Licences</span>
                             <span class="item-price border-bottom font12">
                                 <appsco-price
                                         price="[[ item.amount ]]"
