--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -4905,6 +4905,7 @@
                 this._notify('Selected accounts were successfully removed from company.');
 
                 this._notifyAccountLog();
+                this._notifyReloadAccessOnBoarding();
             },
 
             _onManageDomains: function() {
