--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -272,7 +272,8 @@
                                     name="resources"
                                     authorization-token="[[ authorizationToken ]]"
                                     filter-api="[[ api.dashboards ]]?extended=1"
-                                    page-config="[[ pageConfig ]]"
+                                    page-config-api="[[ api.pageConfigApi ]]"
+                                    page-config="[[ _pageConfig ]]"
                                     resource-admin="[[ _resourceAdmin ]]"
                                     on-add-item-action="_onAddCompanyItemAction"
                                     on-import-resources="_onImportResourcesAction"
@@ -281,7 +282,6 @@
                                     on-select-all-resources="_onSelectAllResourcesAction"
                                     on-share="_onShareResources"
                                     on-remove="_onRemoveApplications"
-                                    on-page-settings-changed="_pageSettingsChanged"
                             ></appsco-resources-page-actions>
 
 
@@ -597,7 +597,7 @@
                             groups-api="[[ _companyGroupsApi ]]"
                             api-errors="[[ _apiErrors ]]"
                             resource-admin="[[ _resourceAdmin ]]"
-                            page-config="[[ pageConfig.resources ]]"
+                            page-config="[[ _pageConfig.resources ]]"
                             get-company-idp-config-list-api="[[ _getCompanyIdpConfigListApi ]]"
                             on-list-loaded="_onLoadedPage"
                             on-share-company-resource="_onShareCompanyResource"
@@ -2302,7 +2302,7 @@
                     notify: true
                 },
 
-                pageConfig: {
+                _pageConfig: {
                     type: Object,
                     value: function() {
                         return {};
@@ -2389,7 +2389,8 @@
                 'reload-access-of-boarding': '_onReloadAccessOnBoarding',
                 'groups-added-to-resources': '_onGroupsAddedToResources',
                 'integration-rule-added': '_onIntegrationRuleAdded',
-                'integration-webhook-registered': '_onIntegrationWebhookRegistered'
+                'integration-webhook-registered': '_onIntegrationWebhookRegistered',
+                'page-settings-changed': '_onPageSettingsChanged'
             },
 
             attached: function() {
@@ -2952,8 +2953,9 @@
 
             _onGetPageConfig: function(event) {
                 var pageConfig = event.detail.response;
-                this.set('pageConfig', {});
-                this.set('pageConfig', pageConfig);
+
+                this.set('_pageConfig', {});
+                this.set('_pageConfig', pageConfig);
             },
 
             _getCurrentCompanyFromAccount: function() {
@@ -4679,29 +4681,14 @@
                 this.$.appscoFoldersRemove.toggle();
             },
 
-            _pageSettingsChanged: function(event) {
-                var page = event.detail.page,
-                    settings = event.detail.settings,
-                    pageConfigRequest = document.createElement('iron-request');
+            _onPageSettingsChanged: function(event) {
+                    var pageComponent = this.getCurrentAppscoPageElement();
 
-                this.pageConfig[page] = settings;
-                this.set('pageConfig', JSON.parse(JSON.stringify(this.pageConfig)));
+                    if (pageComponent.resetListFilters) {
+                        pageComponent.resetListFilters();
+                    }
 
-                pageConfigRequest.send({
-                    url: this.api.pageConfigApi,
-                    method: "PUT",
-                    handleAs: 'json',
-                    headers: {
-                        'Content-Type': 'application/x-www-form-urlencoded',
-                        "Authorization": "token " + this.authorizationToken
-                    },
-                    body: 'page_config[page]=' + page
-                    + '&page_config[hide_resource_section]=' + (settings['hide_resource_section'] ? 1 : 0)
-                    + '&page_config[display_style]=' + settings['display_style']
-                }).then(function(request) {
-                    this.pageConfig = request.response;
-                    this.set('pageConfig', JSON.parse(JSON.stringify(this.pageConfig)));
-                }.bind(this));
+                    this.set('_pageConfig', event.detail.pageConfig);
             },
 
             /**
