DASH-3781 [Provisioning] The name of the external system missing on Integration settings

--- a/src/provisioning/appsco-integration-form.html
+++ b/src/provisioning/appsco-integration-form.html
@@ -121,7 +121,7 @@
 
         <div class="input-container">
             <p class="input-info">
-                Schedule sync interval implies synchronization interval between AppsCo and [[ integration.title ]].
+                Schedule sync interval implies synchronization interval between AppsCo and [[ integration.integration.title ]].
                 Synchronization will run at 00:00 at the start of the schedule sync interval.
             </p>
             <p>
